--- a/less/lumi/core/variables.less
+++ b/less/lumi/core/variables.less
@@ -64,7 +64,7 @@
 
 @global-primary-background:                     #409eff;
 @global-success-background:                     #67c23a;
-@global-warning-background:                     #e6a23c;
+@global-warning-background:                     #ffd04b;
 @global-danger-background:                      #f56c6c;
 
 //
