add important to progress colors

--- a/less/lumi/components/progress.less
+++ b/less/lumi/components/progress.less
@@ -120,40 +120,40 @@
  ========================================================================== */
 
  .uk-progress-primary {
-    border-color: @progress-bar-primary-background;
+    border-color: @progress-bar-primary-background !important;
 
     .uk-progress-bar {
-        background-color: @progress-bar-primary-background;
+        background-color: @progress-bar-primary-background !important;
     }
 
     .hook-progress-bar-primary;
 }
 
 .uk-progress-success {
-    border-color: @progress-bar-success-background;
+    border-color: @progress-bar-success-background !important;
 
     .uk-progress-bar {
-        background-color: @progress-bar-success-background;
+        background-color: @progress-bar-success-background !important;
     }
 
     .hook-progress-bar-success;
 }
 
 .uk-progress-warning {
-    border-color: @progress-bar-warning-background;
+    border-color: @progress-bar-warning-background !important;
 
     .uk-progress-bar {
-        background-color: @progress-bar-warning-background;
+        background-color: @progress-bar-warning-background !important;
     }
     
     .hook-progress-bar-warning;
 }
 
 .uk-progress-danger {
-    border-color: @progress-bar-danger-background;
+    border-color: @progress-bar-danger-background !important;
 
     .uk-progress-bar {
-        background-color: @progress-bar-danger-background;
+        background-color: @progress-bar-danger-background !important;
     }
 
     .hook-progress-bar-danger;
