--- a/less/lumi/core/nav.less
+++ b/less/lumi/core/nav.less
@@ -37,7 +37,7 @@
 // ========================================================================
 
 @nav-padding-vertical:                          6px;
-@nav-padding-horizontal:                        20px;
+@nav-padding-horizontal:                        @global-margin;
 
 @nav-header-padding-vertical:                   @nav-padding-vertical;
 @nav-header-padding-horizontal:                 @nav-padding-horizontal;
